<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/whiteColor"
    >
    <RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:text="Date"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blackColor"
                tools:ignore="HardcodedText" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project"
                android:text="Project"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blackColor"
                tools:ignore="HardcodedText" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/challenge"
                android:text="Challenge"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blackColor"
                tools:ignore="HardcodedText" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/difficulty"
                android:text="Difficulty"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blackColor"
                tools:ignore="HardcodedText" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/staffname"
                android:text="StaffName"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blackColor"
                tools:ignore="HardcodedText" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:text="@string/time"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blackColor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/village"
                android:text="@string/village"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blackColor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/personGroup"
                android:text="@string/persongroup"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blackColor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/meetingPoint"
                android:text="@string/meetingpoint"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blackColor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/actionPoint"
                android:text="@string/actionpoint"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blackColor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nextDayPlanning"
                android:text="@string/nextdayplanning"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/blackColor"
                />
        </LinearLayout>
<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/editBtn"
    android:src="@drawable/ic_action_edit"
    android:background="@null"
    android:layout_alignParentEnd="true"
    tools:ignore="ContentDescription" />

</RelativeLayout>

</androidx.cardview.widget.CardView>
